# mini-FRED-evals

./: .env  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg
config/: series.yaml
corpus/series_cards/: series_CPIAUCSL.md  series_FEDFUNDS.md  series_GDPC1.md  series_PCEPI.md  series_UNRATE.md
data/: MANIFEST.json  warehouse.duckdb
data/raw/: observations_CPIAUCSL_20000101_20251231.json  observations_FEDFUNDS_20000101_20251231.json  observations_GDPC1_20000101_20251231.json  observations_PCEPI_20000101_20251231.json  observations_UNRATE_20000101_20251231.json  series_CPIAUCSL.json  series_FEDFUNDS.json  series_GDPC1.json  series_PCEPI.json  series_UNRATE.json
data/snapshots/: observations.csv  series.csv
docs/: CONTEXT_MAP.md
eval/: golden.jsonl  refusal.jsonl
evals/ext_v1/: README.md  build_evalset.py  cases.jsonl  evalset.jsonl  golden.jsonl  (+10 more)
mves/: spec.yaml  verifier_map.yaml  verifiers.py
rag_agent/: __init__.py  answer_1.py  answer_2.py  answer_3.py  answer_4.py  answer_5.py  llm_parser.py
reports/: mves_report.json  mves_report.md  mves_report_answer_1.json  mves_report_answer_1.md  mves_report_answer_2.json  mves_report_answer_2.md  mves_report_answer_3.json  mves_report_answer_3.md  mves_report_answer_4.json  mves_report_answer_4.md
scripts/: answer.py  build_series_cards.py  debug_ma.py  download_phi4.py  generate_golden.py  ingest_fred.py  mves_run.py  qc_checks.py
src/: __init__.py  fred_client.py  parse.py  retriever.py  series_cards.py  truth.py  util.py  warehouse.py
tests/: test_parse_dates.py
(+50 files in other folders)
