[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-fred"
version = "0.1.1"
description = "Minimal, reproducible Mini-FRED warehouse scaffolding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=0.10",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]
llm = [
    "torch>=2.3",
    "transformers>=4.46",
    "huggingface-hub>=0.23"
]