[options]
package_dir =
    =src
packages = find:
install_requires =
    duckdb>=0.10
    pandas>=2.2
    pyyaml>=6.0
    requests>=2.32
    python-dotenv>=1.0
    scikit-learn>=1.4

[options.packages.find]
where = src

[options.extras_require]
llm =
    torch>=2.3
    transformers>=4.46
    huggingface-hub>=0.23
dev =
    pytest>=8.0
